<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_second_container">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second_fragment_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/second_fragment_text_view_textsize"
        tools:text="@string/second_fragment_text_view_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/second_fragment_goto_first_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment_goto_first_fragment_button_text"
        android:textSize="@dimen/second_fragment_goto_first_fragment_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/second_fragment_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/second_fragment_goto_third_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_fragment_goto_third_fragment_button_text"
        android:textSize="@dimen/second_fragment_goto_third_fragment_button_text_size"
        app:layout_constraintTop_toBottomOf="@id/second_fragment_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>